--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Alpine Tours</title>
+        <title>Alpine Tours | Contact</title>
         <meta name="author" content="Casey Vallee">
         <meta name="description" content="Alpine Tours | Contact">
 
